intermittent checkin resume rendering.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 						<h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Shane Arthur</h1>
 						<div class="title mb-3">Software Engineer</div>
 						<ul class="list-unstyled">
-							<li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2"
+							<li class="mb-2"><a href="#" data-html2canvas-ignore="true"><i class="far fa-envelope fa-fw mr-2"
 										data-fa-transform="grow-3"></i>shane.arthur@gmail.com</a></li>
 							<li><a href="#"><i class="fas fa-mobile-alt fa-fw mr-2"
 										data-fa-transform="grow-6"></i>647-292-1334</a></li>
