Final polishing touches to personal resume.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div id="firstPage">
 <article class="resume-wrapper text-center position-relative">
-	<div class="resume-wrapper-inner mx-auto text-left bg-white shadow-lg">
+	<div style="border: 1px solid black;" class="resume-wrapper-inner mx-auto text-left bg-white shadow-lg">
 		<header class="resume-header pt-4 pt-md-0">
 			<div class="media flex-column flex-md-row">
 				<img class="mr-3 img-fluid picture mx-auto" src="assets/images/shane.png" alt="">
@@ -47,7 +47,7 @@
 						Memorial University of Newfoundland in St John's Newfoundland, I have sinced lived in various cities
 						across North America, and now reside in Toronto, ON which I have called home for the last 4 years. I have experience in both enterprise and startup
 						settings, as well as several years of experience as a consultant. I have worked as a full
-						stack, backend, and now a front-end focused engineer, having working profeciency in
+						stack, backend, and now a front-end focused engineer, having working proficiency in
 						Javascript, Java, C#, Node, HTML, (CSS/LESS/SASS/SCSS), Angular, React, React Native, cloud
 						technologies and more.</p>
 				</div>
@@ -306,27 +306,20 @@
 </div>
 
 
-
-
 <!---   Second PDF Page     -->
-
-
-
-
 
 
 <div id="secondPage">
 		<article class="resume-wrapper text-center position-relative">
-			<div class="resume-wrapper-inner mx-auto text-left bg-white shadow-lg">
-				<div style="padding:2.0rem!important;" class="resume-body p-5">
+			<div style="border: 1px solid black;" class="resume-wrapper-inner mx-auto text-left bg-white shadow-lg">
+				<div style="padding:2.0rem!important; background-color: white;" class="resume-body p-5">
 					<!--//summary-section-->
 					<div class="row">
 						<div class="col-lg-9">
 							<section class="resume-section experience-section mb-5">
 								<div class="resume-section-content">
 									<div class="resume-timeline position-relative">
-										<article style="padding-bottom:1.0rem!important;"
-											class="resume-timeline-item position-relative pb-5">
+										<article style="padding-bottom:1.0rem!important;">
 											<!--//resume-timeline-item-header-->
 											<div style="font-size: 14px;" class="resume-timeline-item-desc">
 												<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies
