Resume typo fix.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -85,12 +85,13 @@
 										<h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:
 										</h4>
 										<ul style="font-size: 13px;">
-											<li>Lead the migration of over 75% of Home Depot Canada to single page
+											<li>Led the migration of over 75% of Home Depot Canada to single page
 												Angular Applications</li>
 											<li>Architect and developed pages responsible for generating up to $10
 												Million CAD revenue daily as of spring 2020. </li>
-											<li>Developed coding and design standards, style guides, and
-												boilerplates used company wide by now over 200 engineers.</li>
+											<li>Developed coding and design standards, style guides,
+												boilerplates, shared libraries, component libraries and core modules used organization wide
+												for all UI.</li>
 											<li>Increased website conversation by over 25% attributed to performance
 												increases, and better user experiences on redesigned pages. </li>
 										</ul>
