Add new badges, and change text.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -291,6 +291,8 @@
 									<li class="list-inline-item"><span class="badge badge-light">MySQL</span></li>
 									<li class="list-inline-item"><span class="badge badge-light">MSSQL</span></li>
 									<li class="list-inline-item"><span class="badge badge-light">Jenkins</span></li>
+									<li class="list-inline-item"><span class="badge badge-light">PWA</span></li>
+									<li class="list-inline-item"><span class="badge badge-light">ASP.NET</span></li>
 								</ul>
 							</div>
 							<!--//resume-skill-item-->
