Fix typos in resume.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -86,7 +86,7 @@
 										</h4>
 										<ul style="font-size: 13px;">
 											<li>Led the migration of over 75% of Home Depot Canada to single page
-												Angular Applications</li>
+												Angular Applications.</li>
 											<li>Architect and developed pages responsible for generating up to $10
 												Million CAD revenue daily as of spring 2020. </li>
 											<li>Developed coding and design standards, style guides,
@@ -157,7 +157,7 @@
 									</div>
 									<!--//resume-timeline-item-header-->
 									<div style="font-size: 14px;" class="resume-timeline-item-desc">
-										<p>Senior front end engineer, responsible for creating interactive userfaces
+										<p>Senior front end engineer, responsible for creating interactive user interfaces
 											and fixing legacy defects for one of Royal Bank Canada's Big Data
 											Analytic Teams.</p>
 										<h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements
@@ -435,10 +435,10 @@
 											<!--//resume-timeline-item-header-->
 											<div style="font-size:14px;" class="resume-timeline-item-desc">
 												<p>Acting as a front end engineer on a test-driven development style project
-													for one one of the big banks, I was responsible for architecture,
-													feature creation, and test automation. The applications function was to
+													for one of the big banks. I was responsible for architecture,
+													feature development, and test automation. The applications function was to
 													complete backoffice/admin tasks for one of their mobile online banking
-													platforms/applications.</p>
+													applications.</p>
 												<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies
 													used:</h4>
 												<ul class="list-inline">
@@ -539,7 +539,7 @@
 											<!--//resume-timeline-item-header-->
 											<div style="font-size:14px;" class="resume-timeline-item-desc">
 												<p>Worked as a back-end developer, creating RESTful endpoints for a large
-													American Investment Managment Company, related to financial
+													American Investment Managment Company relating to financial
 													transactions, and backoffice tasks.</p>
 												<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies
 													used:</h4>
@@ -584,7 +584,7 @@
 											<!--//resume-timeline-item-header-->
 											<div style="font-size:14px;" class="resume-timeline-item-desc">
 												<p>Part of a small team of full-stack developers, creating a SAAS product
-													which was a web application to promote organization
+													which was a web application to promote organizations
 													to commit environmentally friendly acts. Clients included major North
 													American Universities and Financial Institutions.
 												</p>
