Resume typo fixes.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,17 +42,21 @@
 				<section style="margin-bottom: 1.5rem !important;" class="resume-section summary-section mb-5">
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
 					<div class="resume-section-content">
-						<p style="font-size: 15px;" class="mb-0">Full stack software engineer, with a focus towards the
-							front end and front end technologies, I have over 7 years of professional experience in the
-							field. Software development has taken me across the continent, having graduated from the
-							Memorial University of Newfoundland in St John's Newfoundland, I have sinced lived in
-							various cities
-							across North America, and now reside in Toronto, ON which I have called home for the last 4
+						<p style="font-size: 15px;" class="mb-0">Full stack software engineer with over 7 years in the
+							field,
+							I am focused towards the
+							front end and front end technologies. Software development has taken me across the continent
+							- I graduated from
+							Memorial University of Newfoundland in St John's Newfoundland, and have since lived in
+							various cities across North America. I now reside in Toronto, Ontario which I have called
+							home for the last 4
 							years. I have experience in both enterprise and startup
-							settings, as well as several years of experience as a consultant. I have worked as a full
-							stack, backend, and now a front-end focused engineer, having working proficiency in
+							settings, as well as several years of experience as a consultant. Also I have worked as a
+							full
+							stack, backend, and now a front-end focused engineer with working proficiency in
 							Javascript, Java, C#, Node, HTML, (CSS/LESS/SASS/SCSS), Angular, React, React Native, cloud
-							technologies and more.</p>
+							technologies and more.
+						</p>
 					</div>
 				</section>
 				<!--//summary-section-->
@@ -90,7 +94,7 @@
 											<ul style="font-size: 13px;">
 												<li>Led the migration of over 75% of Home Depot Canada to single page
 													Angular Applications.</li>
-												<li>Architect and developed pages responsible for generating up to $10
+												<li>Architected and developed pages responsible for generating up to $10
 													Million CAD revenue daily as of spring 2020. </li>
 												<li>Developed coding and design standards, style guides,
 													boilerplates, shared libraries, component libraries and core modules
@@ -150,7 +154,7 @@
 													Engineer <small style="font-size: 12px;"
 														class="text-muted">(Contract)</small></h3>
 												<!--<span style="display: flex; justify-content: center; flex-direction: column; align-items:center; margin-left: 10px; font-size: 12px;">(contract)</span> -->
-												<div class="resume-company-name ml-auto">Royal Bank Canada <small
+												<div class="resume-company-name ml-auto">Royal Bank of Canada <small
 														style="text-align:center; display: block;">Toronto,
 														ON, CAN</small>
 												</div>
@@ -163,14 +167,14 @@
 										<div style="font-size: 14px;" class="resume-timeline-item-desc">
 											<p>Senior front end engineer, responsible for creating interactive user
 												interfaces
-												and fixing legacy defects for one of Royal Bank Canada's Big Data
+												and fixing legacy defects for one of Royal Bank of Canada's Big Data
 												Analytic Teams.</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements
 											</h4>
 											<ul style="font-size: 13px;">
 												<li>Created a data-visualization dashboard in Angular capable of
 													consuming and visualizing large unstructured batched data.</li>
-												<li>Sought after and fixed legacy defects, some of which have been
+												<li>Sought after and fixed legacy defects, some of which were
 													plaguaging the organization for over 5 years. </li>
 											</ul>
 										</div>
@@ -320,7 +324,7 @@
 <div id="secondPage">
 	<article class="resume-wrapper text-center position-relative">
 		<div style="border: 1px solid black;" class="resume-wrapper-inner mx-auto text-left bg-white shadow-lg">
-			<div style="padding:2.0rem!important; background-color: white;" class="resume-body p-5">
+			<div style="padding:2.0rem!important;" class="resume-body p-5">
 				<!--//summary-section-->
 				<div class="row">
 					<div class="col-lg-9">
@@ -378,8 +382,8 @@
 										</div>
 										<!--//resume-timeline-item-header-->
 										<div style="font-size:14px;" class="resume-timeline-item-desc">
-											<p>Senior / Lead Front End engineer resonsible for leading the kick-off of
-												The Home Depots Canada's Digital Transformation from the front-end.</p>
+											<p>Senior / Lead Front End engineer responsible for leading the kick-off of
+												The Home Depot Canada's Digital Transformation from the front-end.</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements
 											</h4>
 											<ul style="font-size: 13px;">
@@ -439,11 +443,11 @@
 										</div>
 										<!--//resume-timeline-item-header-->
 										<div style="font-size:14px;" class="resume-timeline-item-desc">
-											<p>Acting as a front end engineer on a test-driven development style project
+											<p>Acted as a front end engineer on a test-driven development style project
 												for one of the big banks. I was responsible for architecture,
-												feature development, and test automation. The applications function was
+												feature development, and test automation. The application function was
 												to
-												complete backoffice/admin tasks for one of their mobile online banking
+												complete backoffice/admin tasks for one of their online mobile banking
 												applications.</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies
 												used:</h4>
@@ -493,9 +497,9 @@
 											<p>Placed on two projects throughout my time at Avande, both as a
 												full-stack engineer. One project was a portfolio visualization project
 												for a large American hedgefund.
-												The other project was an application used by call centre agents at one
-												of the Big Banks in Canada to help better serve clients with incoming
-												inquiries.</p>
+												The other project was an application used by call centre agents to help
+												better serve clients with incoming inquiries at one of the Big Banks in
+												Canada.</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies
 												used:</h4>
 											<ul class="list-inline">
@@ -545,7 +549,7 @@
 										<!--//resume-timeline-item-header-->
 										<div style="font-size:14px;" class="resume-timeline-item-desc">
 											<p>Worked as a back-end developer, creating RESTful endpoints for a large
-												American Investment Managment Company relating to financial
+												American Investment Management Company relating to financial
 												transactions, and backoffice tasks.</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies
 												used:</h4>
@@ -643,7 +647,7 @@
 										<i class="resume-award-icon fas fa-trophy position-absolute"
 											data-fa-transform="shrink-2"></i>
 										<div class="resume-award-name">Highest Impact Project</div>
-										<div class="resume-award-desc">Was a team memeber on the highest impact project
+										<div class="resume-award-desc">Team member on the highest impact project
 											in 2016 for Avande. As selected by clients and peers.
 										</div>
 									</li>
@@ -651,9 +655,9 @@
 										<i class="resume-award-icon fas fa-trophy position-absolute"
 											data-fa-transform="shrink-2"></i>
 										<div class="resume-award-name">Homer Award(s)</div>
-										<div class="resume-award-desc">Received Homer Awards in 2018 and 2019 at Home
-											Depot, which recognizes outstanding work, and going the
-											extra mile to drive projects to completion.
+										<div class="resume-award-desc">Received Homer Award in both 2018 and 2019 at
+											Home Depot. This award recognized outstanding work and "going the extra
+											mile" to drive projects to completion.
 										</div>
 									</li>
 								</ul>
@@ -665,10 +669,10 @@
 							<div class="resume-section-content">
 								<ul class="list-unstyled resume-lang-list">
 									<li class="mb-2"><span class="resume-lang-name font-weight-bold">English</span>
-										<small class="text-muted font-weight-normal">(Native)</small></li>
+										<small class="text-muted font-weight-normal">&nbsp;(Native)</small></li>
 									<li class="mb-2 align-middle"><span
 											class="resume-lang-name font-weight-bold">French</span> <small
-											class="text-muted font-weight-normal">(Working)</small></li>
+											class="text-muted font-weight-normal">&nbsp;(Working)</small></li>
 									<li>
 								</ul>
 							</div>
