--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -177,6 +177,35 @@
 												<li>Sought after and fixed legacy defects, some of which were
 													plaguaging the organization for over 5 years. </li>
 											</ul>
+											<div style="font-size: 14px;" class="resume-timeline-item-desc">
+												<h4 class="resume-timeline-item-desc-heading font-weight-bold">
+													Technologies
+													used:</h4>
+												<ul class="list-inline">
+													<li class="list-inline-item"><span
+															class="badge badge-primary badge-pill">Angular</span></li>
+													<li class="list-inline-item"><span
+															class="badge badge-primary badge-pill">RxJs</span></li>
+													<li class="list-inline-item"><span
+															class="badge badge-primary badge-pill">NgRx</span></li>
+													<li class="list-inline-item"><span
+															class="badge badge-primary badge-pill">HTML/SASS</span></li>
+													<li class="list-inline-item"><span
+															class="badge badge-primary badge-pill">React</span></li>
+													<li class="list-inline-item"><span
+															class="badge badge-primary badge-pill">Redux</span></li>
+													<li class="list-inline-item"><span
+															class="badge badge-primary badge-pill">angular.js</span>
+													</li>
+													<li class="list-inline-item"><span
+															class="badge badge-primary badge-pill">Postgres SQL</span>
+													</li>
+													<li class="list-inline-item"><span
+															class="badge badge-primary badge-pill">Java</span></li>
+													<li class="list-inline-item"><span
+															class="badge badge-primary badge-pill">JQuery</span></li>
+												</ul>
+											</div>
 										</div>
 										<!--//resume-timeline-item-desc-->
 
@@ -331,39 +360,6 @@
 						<section class="resume-section experience-section mb-5">
 							<div class="resume-section-content">
 								<div class="resume-timeline position-relative">
-									<article style="padding-bottom:1.0rem!important;">
-										<!--//resume-timeline-item-header-->
-										<div style="font-size: 14px;" class="resume-timeline-item-desc">
-											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies
-												used:</h4>
-											<ul class="list-inline">
-												<li class="list-inline-item"><span
-														class="badge badge-primary badge-pill">Angular</span></li>
-												<li class="list-inline-item"><span
-														class="badge badge-primary badge-pill">RxJs</span></li>
-												<li class="list-inline-item"><span
-														class="badge badge-primary badge-pill">NgRx</span></li>
-												<li class="list-inline-item"><span
-														class="badge badge-primary badge-pill">HTML/SASS</span></li>
-												<li class="list-inline-item"><span
-														class="badge badge-primary badge-pill">React</span></li>
-												<li class="list-inline-item"><span
-														class="badge badge-primary badge-pill">Redux</span></li>
-												<li class="list-inline-item"><span
-														class="badge badge-primary badge-pill">angular.js</span></li>
-												<li class="list-inline-item"><span
-														class="badge badge-primary badge-pill">Postgres SQL</span></li>
-												<li class="list-inline-item"><span
-														class="badge badge-primary badge-pill">Java</span></li>
-												<li class="list-inline-item"><span
-														class="badge badge-primary badge-pill">JQuery</span></li>
-											</ul>
-										</div>
-										<!--//resume-timeline-item-desc-->
-
-									</article>
-									<!--//resume-timeline-item-->
-
 									<article style="padding-bottom:0 !important;"
 										class="resume-timeline-item position-relative pb-5">
 
