Fix typo, add spacing first title.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,7 +70,7 @@
 									<article style="padding-bottom:1.5rem!important;"
 										class="resume-timeline-item position-relative pb-5">
 
-										<div class="resume-timeline-item-header mb-2">
+										<div style="margin-top:25px" class="resume-timeline-item-header mb-2">
 											<div style="margin-top: -10px; justify-content: space-between;"
 												class="d-flex flex-column flex-md-row">
 												<h3 class="resume-position-title font-weight-bold mb-1">UI Architect
@@ -644,7 +644,7 @@
 											data-fa-transform="shrink-2"></i>
 										<div class="resume-award-name">Highest Impact Project</div>
 										<div class="resume-award-desc">Team member on the highest impact project
-											in 2016 for Avande. As selected by clients and peers.
+											in 2016 for Avande as selected by clients and peers.
 										</div>
 									</li>
 									<li class="mb-0 pl-4 position-relative">
