--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,18 +42,15 @@
 				<section style="margin-bottom: 1.5rem !important;" class="resume-section summary-section mb-5">
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
 					<div class="resume-section-content">
-						<p style="font-size: 15px;" class="mb-0">Full stack software engineer with over 7 years in the
-							field,
-							I am focused towards the
-							front end and front end technologies. Software development has taken me across the continent
-							- I graduated from
-							Memorial University of Newfoundland in St John's Newfoundland, and have since lived in
-							various cities across North America. I now reside in Toronto, Ontario which I have called
-							home for the last 4
-							years. I have experience in both enterprise and startup
-							settings, as well as several years of experience as a consultant. Also I have worked as a
-							full
-							stack, backend, and now a front-end focused engineer with working proficiency in
+						<p style="font-size: 15px;" class="mb-0">I am a full stack software engineer with over 7 years
+							of experience, and I currently focus on frontend technologies. I graduated from Memorial
+							University
+							of Newfoundland and am currently based out of Toronto, Ontario, Canada. I’ve got a wide
+							range of work
+							experience within software development, including managing a large ecommerce platform,
+							building apps for several startups, and acting as a software consultant. My
+							experience is not limited to the frontend, as I have also worked as a full stack and backend
+							engineer with proficiency in
 							Javascript, Java, C#, Node, HTML, (CSS/LESS/SASS/SCSS), Angular, React, React Native, cloud
 							technologies and more.
 						</p>
@@ -85,14 +82,15 @@
 										</div>
 										<!--//resume-timeline-item-header-->
 										<div style="font-size: 14px;" class="resume-timeline-item-desc">
-											<p>UI Architect Leading a large team of 20+ front end engineers through The
-												Home Depot Canada's digital Transformation. Responsible for high level
+											<p>UI Architect leading a large team of 20+ frontend engineers through The
+												Home Depot Canada's Digital Transformation. Responsible for high level
 												architecture, feature delivery, crisis production defect triaging,
 												mentorship of junior engineers, and more.</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:
 											</h4>
 											<ul style="font-size: 13px;">
-												<li>Led the migration of over 75% of Home Depot Canada to single page
+												<li>Led the migration of over 75% of Home Depot Canada's ecommerce
+													platform to single page
 													Angular Applications.</li>
 												<li>Architected and developed pages responsible for generating up to $10
 													Million CAD revenue daily as of spring 2020. </li>
@@ -100,8 +98,10 @@
 													boilerplates, shared libraries, component libraries and core modules
 													used organization wide
 													for all UI.</li>
-												<li>Increased website conversation by over 25% attributed to performance
+												<li>Increased website conversion by over 25% attributed to performance
 													increases, and better user experiences on redesigned pages. </li>
+												<li> Responsible for hiring and onboarding new engineers as the frontend
+													team more than doubled in size. </li>
 											</ul>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies
 												used:</h4>
@@ -165,17 +165,19 @@
 										</div>
 										<!--//resume-timeline-item-header-->
 										<div style="font-size: 14px;" class="resume-timeline-item-desc">
-											<p>Senior front end engineer, responsible for creating interactive user
+											<p>Senior frontend engineer, responsible for creating interactive user
 												interfaces
-												and fixing legacy defects for one of Royal Bank of Canada's Big Data
-												Analytic Teams.</p>
+												and fixing legacy defects on the Big Data Analytics team within the
+												Royal Bank of Canada's Capital Markets segment.</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements
 											</h4>
 											<ul style="font-size: 13px;">
 												<li>Created a data-visualization dashboard in Angular capable of
 													consuming and visualizing large unstructured batched data.</li>
-												<li>Sought after and fixed legacy defects, some of which were
-													plaguaging the organization for over 5 years. </li>
+												<li> Ran demo and training sessions for navigating and using said
+													dashboard.</li>
+												<li>Identified and fixed legacy defects, some of which were
+													in production for over 5 years. </li>
 											</ul>
 											<div style="font-size: 14px;" class="resume-timeline-item-desc">
 												<h4 class="resume-timeline-item-desc-heading font-weight-bold">
@@ -378,17 +380,16 @@
 										</div>
 										<!--//resume-timeline-item-header-->
 										<div style="font-size:14px;" class="resume-timeline-item-desc">
-											<p>Senior / Lead Front End engineer responsible for leading the kick-off of
-												The Home Depot Canada's Digital Transformation from the front-end.</p>
+											<p>Senior / Lead frontend engineer responsible for leading the kick-off of
+												The Home Depot Canada's Digital Transformation from the frontend.</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements
 											</h4>
 											<ul style="font-size: 13px;">
 												<li>Created the first non-static, responsive UI in the Home Depot
-													Canada's e-commerce website, resulting in a non-subjectively better
-													end to end shopping experience. </li>
-												<li> Created boilerplate / tooling which is now used by over 100
-													engineers organization wide when creating new pages and
-													micro-components.</li>
+													Canada's ecommerce platform, resulting in a better
+													start to end shopping experience. </li>
+												<li> Architected the first server side rendered implementation of our
+													UI, allowing for social sharing and better SEO.</li>
 											</ul>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies
 												used:</h4>
@@ -439,11 +440,12 @@
 										</div>
 										<!--//resume-timeline-item-header-->
 										<div style="font-size:14px;" class="resume-timeline-item-desc">
-											<p>Acted as a front end engineer on a test-driven development style project
-												for one of the big banks. I was responsible for architecture,
-												feature development, and test automation. The application function was
+											<p>Acted as a frontend engineer on a test-driven development style web
+												application
+												for one of the big banks. Responsible for architecture,
+												feature development, and test automation. The function was
 												to
-												complete backoffice/admin tasks for one of their online mobile banking
+												complete back office/admin tasks for one of their online mobile banking
 												applications.</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies
 												used:</h4>
@@ -490,11 +492,13 @@
 										</div>
 										<!--//resume-timeline-item-header-->
 										<div style="font-size:14px;" class="resume-timeline-item-desc">
-											<p>Placed on two projects throughout my time at Avande, both as a
-												full-stack engineer. One project was a portfolio visualization project
-												for a large American hedgefund.
-												The other project was an application used by call centre agents to help
-												better serve clients with incoming inquiries at one of the Big Banks in
+											<p>Placed on two projects at Avande, both as a
+												full stack engineer. One project was a portfolio visualization web
+												application
+												for a large American hedge fund.
+												The other project was an desktop application used by call centre agents
+												to
+												better serve clients with incoming inquiries at one of the big banks in
 												Canada.</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies
 												used:</h4>
@@ -544,9 +548,9 @@
 										</div>
 										<!--//resume-timeline-item-header-->
 										<div style="font-size:14px;" class="resume-timeline-item-desc">
-											<p>Worked as a back-end developer, creating RESTful endpoints for a large
+											<p>Worked as a backend engineer, creating RESTful endpoints for a large
 												American Investment Management Company relating to financial
-												transactions, and backoffice tasks.</p>
+												transactions, and back office tasks.</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies
 												used:</h4>
 											<ul class="list-inline">
@@ -589,9 +593,10 @@
 										</div>
 										<!--//resume-timeline-item-header-->
 										<div style="font-size:14px;" class="resume-timeline-item-desc">
-											<p>Part of a small team of full-stack developers, creating a SAAS product
-												which was a web application to promote organizations
-												to commit environmentally friendly acts. Clients included major North
+											<p>Part of a small team of full stack engineers, creating a SaaS product.
+												The product was a web application that helped companies promote
+												environmentally-friendly actions amongst their employees. Clients
+												included major North
 												American Universities and Financial Institutions.
 											</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies
