--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
 								<li class="mb-2"><a href="#" data-html2canvas-ignore="true"><i
 											class="far fa-envelope fa-fw mr-2"
 											data-fa-transform="grow-3"></i>shane.arthur@gmail.com</a></li>
-								<li><a href="#"><i class="fas fa-mobile-alt fa-fw mr-2"
+								<li style="transform: translateY(10px)" class="mb-2"><a href="#"><i class="fas fa-mobile-alt fa-fw mr-2"
 											data-fa-transform="grow-6"></i>647-292-1334</a></li>
 							</ul>
 						</div>
@@ -245,15 +245,6 @@
 													aria-valuemax="100"></div>
 											</div>
 										</li>
-										<li class="mb-2">
-											<div class="resume-skill-name">Node.js</div>
-											<div class="progress resume-progress">
-												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 80%" aria-valuenow="25" aria-valuemin="0"
-													aria-valuemax="100"></div>
-											</div>
-										</li>
-
 										<li class="mb-2">
 											<div class="resume-skill-name">HTML/CSS/SCSS/LESS</div>
 											<div class="progress resume-progress">
@@ -496,7 +487,7 @@
 												full stack engineer. One project was a portfolio visualization web
 												application
 												for a large American hedge fund.
-												The other project was an desktop application used by call centre agents
+												The other project was a desktop application used by call centre agents
 												to
 												better serve clients with incoming inquiries at one of the big banks in
 												Canada.</p>
