--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,8 @@
         <div class="media flex-column flex-md-row">
           <img
             class="mr-3 img-fluid picture mx-auto"
-            src="assets/images/shane.png"
-            alt=""
+            src="/assets/images/shane.jpg"
+            alt="hui"
           />
           <div
             class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0"
@@ -23,7 +23,7 @@
               <div class="title mb-3">Software Engineer</div>
               <ul class="list-unstyled">
                 <li class="mb-2">
-                  <a href="#" data-html2canvas-ignore="true"
+                  <a href="#"
                     ><i
                       class="far fa-envelope fa-fw mr-2"
                       data-fa-transform="grow-3"
@@ -97,7 +97,7 @@
               University of Newfoundland and am based out of Fort Lauderdale,
               Florida, USA. I have a wide range of work experience within
               software development including building multiple greenfield
-              e-commerce platforms, building applications for various startups,
+              e-commerce platforms, building applications across multiple domains for various startups,
               and acting as a software consultant for several major financial
               institutions. My experience is not limited to the frontend, as I
               have also worked as a full stack and backend engineer with
@@ -138,7 +138,7 @@
                         <h3 class="resume-position-title font-weight-bold mb-1">
                           Software Engineering Manager
                         </h3>
-                        <div class="resume-company-name ml-auto">
+                        <div style="text-align: end" class="resume-company-name ml-auto">
                           <span> Wish </span>
                           <small style="text-align: center; display: block"
                             >Fort Lauderdale, FL, US</small
@@ -169,12 +169,13 @@
                       <div
                         style="justify-content: space-between"
                         class="d-flex flex-column flex-md-row"
+                        style="margin-top: 16px"
                       >
                         <h3 class="resume-position-title font-weight-bold mb-1">
                           Senior Software Engineer
                         </h3>
-                        <div class="resume-company-name ml-auto">
-                          &nbsp;
+                        <div style="text-align: end;" class="resume-company-name ml-auto">
+                          <span> Wish </span>
                           <small style="text-align: center; display: block"
                             >Toronto, ON, CAN</small
                           >
@@ -1256,7 +1257,7 @@
                     <!--//resume-timeline-item-desc-->
                   </article>
 
-                  <article class="resume-timeline-item position-relative">
+                  <article style="margin-top: 16px;" class="resume-timeline-item position-relative">
                     <div class="resume-timeline-item-header mb-2">
                       <div class="d-flex flex-column flex-md-row">
                         <h3 class="resume-position-title font-weight-bold mb-1">
@@ -1337,7 +1338,7 @@
                     <!--//resume-timeline-item-desc-->
                   </article>
 
-                  <article class="resume-timeline-item position-relative">
+                  <article style="margin-top: 16px;" class="resume-timeline-item position-relative">
                     <div class="resume-timeline-item-header mb-2">
                       <div class="d-flex flex-column flex-md-row">
                         <h3 class="resume-position-title font-weight-bold mb-1">
